# wol

./: .clang-format  .gitignore  Makefile.am  configure.ac  meson.build
check/: nic-fake.py
demo/: nic-fake.py
doc/: meson.build  wol.1  wol.texi
include/: magic.h  net.h  proxy.h  wol.h
po/: LINGUAS  POTFILES  de.po  es.po  fr.po  it.po  sv.po
src/: Makefile.am  macfile.c  macfile.h  magic.c  meson.build  net.c  proxy.c  wol.c  wol.h
